<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_tbr"
        android:textSize="@dimen/dimen18sp"
        android:textStyle="bold"
        android:paddingBottom="@dimen/dimen16dp" />

    <EditText
        android:id="@+id/edit_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title"
        android:inputType="textCapWords"
        android:padding="@dimen/dimen12dp" />

    <EditText
        android:id="@+id/edit_author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_name"
        android:inputType="textCapWords"
        android:padding="@dimen/dimen12dp"
        android:layout_marginTop="@dimen/dimen8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="@dimen/dimen16dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginStart="@dimen/dimen8dp" />

    </LinearLayout>

</LinearLayout>
